--- a/index.html
+++ b/index.html
@@ -4,10 +4,54 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Vue To Do List</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
     <link rel="stylesheet" href="./CSS/style.css">
 </head>
 <body>
+    <h1 class="text-center my-3">VUE TO DO LIST</h1>
+    <div class="container">
+        <div class="row">
+            <div class="col-12">
+                <div class="content">
+                    <h2 class="text-center title">To Do List</h2>
+                    <hr class="hr">
+                    <ul class="list-group-flush">
+                        <li class="list-group-item d-flex justify-content-between">
+                            <div class="task ">
+                                T  
+                            </div> 
+                            <div class="button">
+                                <button class="btn btn-sm btn-primary"><i class="fa-solid fa-check"></i></button>
+                                <button class="btn btn-sm btn-danger"><i class="fa-solid fa-x"></i></button>
+                            </div>
+                        </li>
+                        <hr>
+                        <li class="list-group-item">T</li>
+                        <hr>
+                        <li class="list-group-item">T</li>
+                        <hr>
+                        <li class="list-group-item">T</li>
+                        <hr>
+                        <li class="list-group-item">T</li>
+                        <hr>
+                        <li class="list-group-item">T</li>
+                        <hr>
+                        <li class="list-group-item">T</li>
+                        <hr>
+                        <li class="list-group-item">T</li>
+                        <hr>
+                        <li class="list-group-item">T</li>
+                        <hr>
+                    </ul>
+                    <div class="add-task">
+                        <input type="text" class="input">
+                        <button class="btn btn-sm btn-warning"><i class="fa-solid fa-plus"></i>AGGIUNGI</button>
+                    </div>  
+                </div>
+            </div>
+        </div>
+    </div>
     <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
     <script type="text/javascript" src="./JS/script.js"></script>
 </body>
